--- a/data/index.html
+++ b/data/index.html
@@ -65,7 +65,7 @@
             <p class="card-title">PM25</p>
             <p class ="card-text"><span id="12h"></span></p>
         </div>
-        div class="card">
+        <div class="card">
             <p class="card-title">CO2</p>
             <p class ="card-text"><span id="13h"></span></p>
         </div>
@@ -76,12 +76,12 @@
         <div class="card">
             <p class="card-title">Temperature Offset</p>
             <p class ="card-text"><input id="15h" type="text" /></p>
-            <button onclick="setSetting('TempOffset', +document.getElementById('13h').value)">OK</button>
+            <button onclick="setSetting('TempOffset', +document.getElementById('15h').value)">OK</button>
         </div>
         <div class="card">
             <p class="card-title">Humidity Offset</p>
             <p class ="card-text"><input id="16h" type="text"></span></p>
-            <button onclick="setSetting('TempOffset', +document.getElementById('14h').value)">OK</button>
+            <button onclick="setSetting('TempOffset', +document.getElementById('16h').value)">OK</button>
         </div>
     </div>
 </div>
