added notify LED

--- a/data/index.html
+++ b/data/index.html
@@ -54,6 +54,10 @@
             <p class ="card-text"><span id="9h"></span></p>
         </div>
         <div class="card">
+            <p class="card-title">Notify</p>
+            <p class ="card-text"><span id="12h"></span></p>
+        </div>
+        <div class="card">
             <p class="card-title">Temperature Offset</p>
             <p class ="card-text"><input id="10h" type="text" /></p>
             <button onclick="setSetting('TempOffset', +document.getElementById('10h').value)">OK</button>
@@ -61,7 +65,7 @@
         <div class="card">
             <p class="card-title">Humidity Offset</p>
             <p class ="card-text"><input id="11h" type="text"></span></p>
-            <button onclick="setSetting('TempOffset', +document.getElementById('11h').value)">OK</button>
+            <button onclick="setSetting('HumOffset', +document.getElementById('11h').value)">OK</button>
         </div>
     </div>
 </div>
